--- a/app/views/actors/new.html.haml
+++ b/app/views/actors/new.html.haml
@@ -16,6 +16,11 @@
       %td
         = f.text_field :country
     %tr
+      %td
+        Avatar
+      %td
+        = f.file_field :avatar
+    %tr
       %td{colspan: 2}
         = f.submit :Create
 
