--- a/app/views/actors/edit.html.haml
+++ b/app/views/actors/edit.html.haml
@@ -12,9 +12,14 @@
         = f.text_field :birth_day
     %tr
       %td
-        Coutry
+        Country
       %td
         = f.text_field :country
+    %tr
+      %td
+        Avatar
+      %td
+        = f.file_field :avatar
     %tr
       %td{colspan: 2}
         = f.submit :Edit
