--- a/app/views/movies/new.html.haml
+++ b/app/views/movies/new.html.haml
@@ -7,6 +7,11 @@
         = f.text_field :name_movie
     %tr
       %td
+        Movie Covers
+      %td
+        = f.file_field :covers, multiple: true
+    %tr
+      %td
         Category
       %td
         = f.text_field :category
